@@ -13,6 +13,8 @@
  * 	- better accuracy with smarter multiplication
  * 15/8/16
  * 	- rename yshrink as vshrink for consistency
+ * 9/9/16
+ * 	- add @centre option
  */
 
 /*
@@ -99,6 +101,10 @@ typedef struct _VipsReducev {
 	/* The thing we use to make the kernel.
 	 */
 	VipsKernel kernel;
+
+	/* Use centre rather than corner sampling convention.
+	 */
+	gboolean centre;
 
 	/* Number of points in kernel.
 	 */
@@ -526,6 +532,8 @@ vips_reducev_gen( VipsRegion *out_region, void *vseq,
 	s.top = r->top * reducev->vshrink;
 	s.width = r->width;
 	s.height = r->height * reducev->vshrink + reducev->n_point;
+	if( reducev->centre )
+		s.height += 1;
 	if( vips_region_prepare( ir, &s ) )
 		return( -1 );
 
@@ -534,7 +542,8 @@ vips_reducev_gen( VipsRegion *out_region, void *vseq,
 	for( int y = 0; y < r->height; y ++ ) { 
 		VipsPel *q = 
 			VIPS_REGION_ADDR( out_region, r->left, r->top + y );
-		const double Y = (r->top + y) * reducev->vshrink; 
+		const double Y = (r->top + y) * reducev->vshrink + 
+			(reducev->centre ? 0.5 : 0.0); 
 		VipsPel *p = VIPS_REGION_ADDR( ir, r->left, (int) Y ); 
 		const int sy = Y * VIPS_TRANSFORM_SCALE * 2;
 		const int siy = sy & (VIPS_TRANSFORM_SCALE * 2 - 1);
@@ -636,6 +645,8 @@ vips_reducev_vector_gen( VipsRegion *out_region, void *vseq,
 	s.top = r->top * reducev->vshrink;
 	s.width = r->width;
 	s.height = r->height * reducev->vshrink + reducev->n_point;
+	if( reducev->centre )
+		s.height += 1;
 	if( vips_region_prepare( ir, &s ) )
 		return( -1 );
 
@@ -653,7 +664,8 @@ vips_reducev_vector_gen( VipsRegion *out_region, void *vseq,
 	for( int y = 0; y < r->height; y ++ ) { 
 		VipsPel *q = 
 			VIPS_REGION_ADDR( out_region, r->left, r->top + y );
-		const double Y = (r->top + y) * reducev->vshrink; 
+		const double Y = (r->top + y) * reducev->vshrink + 
+			(reducev->centre ? 0.5 : 0.0); 
 		const int py = (int) Y; 
 		const int sy = Y * VIPS_TRANSFORM_SCALE * 2;
 		const int siy = sy & (VIPS_TRANSFORM_SCALE * 2 - 1);
@@ -783,7 +795,7 @@ vips_reducev_raw( VipsReducev *reducev, VipsImage *in )
 	 * fractional part), we just see the integer part here.
 	 */
 	resample->out->Ysize = VIPS_ROUND_UINT( 
-		(in->Ysize - reducev->n_point + 1) / reducev->vshrink );
+		resample->in->Ysize / reducev->vshrink );
 	if( resample->out->Ysize <= 0 ) { 
 		vips_error( object_class->nickname, 
 			"%s", _( "image has shrunk to nothing" ) );
@@ -813,6 +825,7 @@ vips_reducev_build( VipsObject *object )
 	VipsImage **t = (VipsImage **) vips_object_local_array( object, 2 );
 
 	VipsImage *in;
+	int height;
 
 	if( VIPS_OBJECT_CLASS( vips_reducev_parent_class )->build( object ) )
 		return( -1 );
@@ -845,9 +858,12 @@ vips_reducev_build( VipsObject *object )
 
 	/* Add new pixels around the input so we can interpolate at the edges.
 	 */
+	height = in->Ysize + reducev->n_point - 1;
+	if( reducev->centre )
+		height += 1;
 	if( vips_embed( in, &t[1], 
 		0, reducev->n_point / 2 - 1, 
-		in->Xsize, in->Ysize + reducev->n_point - 1, 
+		in->Xsize, height, 
 		"extend", VIPS_EXTEND_COPY,
 		NULL ) )
 		return( -1 );
@@ -893,6 +909,13 @@ vips_reducev_class_init( VipsReducevClass *reducev_class )
 		G_STRUCT_OFFSET( VipsReducev, kernel ),
 		VIPS_TYPE_KERNEL, VIPS_KERNEL_LANCZOS3 );
 
+	VIPS_ARG_BOOL( reducev_class, "centre", 7, 
+		_( "Centre" ), 
+		_( "Use centre sampling convention" ),
+		VIPS_ARGUMENT_OPTIONAL_INPUT,
+		G_STRUCT_OFFSET( VipsReducev, centre ),
+		FALSE );
+
 	/* Old name.
 	 */
 	VIPS_ARG_DOUBLE( reducev_class, "yshrink", 3, 
@@ -920,9 +943,13 @@ vips_reducev_init( VipsReducev *reducev )
  * Optional arguments:
  *
  * * @kernel: #VipsKernel to use to interpolate (default: lanczos3)
+ * * @centre: %gboolean use centre rather than corner sampling convention
  *
  * Reduce @in vertically by a float factor. The pixels in @out are
- * interpolated with a 1D mask. 
+ * interpolated with a 1D mask generated by @kernel.
+ *
+ * Set @centre to use centre rather than corner sampling convention. Centre
+ * convention can be useful to match the behaviour of other systems. 
  *
  * This is a very low-level operation: see vips_resize() for a more
  * convenient way to resize images. 
