@@ -43,6 +43,8 @@
   rounding down, thanks ioquatix
 - better support for tile overlaps in google maps mode in dzsave
 - dzsave puts vips-properties.xml in the main dir for gm and zoomify layouts
+- resize and reduce have @centre option for centre convention downsampling
+- vipsthumbnail uses centre convention to better match imagemagick
 
 19/8/16 started 8.3.4
 - better transparency handling in gifload, thanks diegocsandrim
